css/admin_coursepress_page_course_details.css
/* Students */
.zero-students{
    padding: 0px 0px 14px;
}
.widefat td{
    padding: 14px 7px 0px;
}

#students_accordion .widefat td{
    padding: 14px 7px 12px;
}

.add-student-class-area{
    margin-top: 20px;
}

/* UNIT MODULES */

.new-unit-element-holder{
    background-color: #f1f1f1;
    margin-right: 15px;
    margin-top: 15px;
    margin-left: 15px;
    padding-bottom: 5px;
}

#unit-pages{
    border: 0px;
}

.arrow-down {
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid #0074a2;
    position: absolute;
    bottom: -6px;
    left: 7px;
    display: none;
}

.elements-separator{
    width: 1px;
    height: 44px;
    display: inline-block;
    border-left: 1px solid #f3f3f3;
    margin-left: 15px;
    margin-right: 15px;
    margin-top: 5px;
    margin-bottom: -5px;
}

.elements-holder .input-element,
.elements-holder .output-element{
    display: inline-block;
    /*width: 92px;*/
    width: auto;
    padding-left: 12px;
    padding-right: 12px;
    height: 49px;
    background: transparent url( ../images/Assets.svg ) no-repeat;
    text-align: center;
    padding-bottom: 5px;
    margin-bottom: 10px;
    border: 1px solid #fff;
    cursor: pointer;
    position: relative;
}

.elements-holder .input-element:hover,
.elements-holder .output-element:hover{
    border: 1px solid #dddddd;
    -moz-box-shadow:    1px 1px 1px 1px #f3f3f3;
    -webkit-box-shadow: 1px 1px 1px 1px #f3f3f3;
    box-shadow:         1px 1px 1px 1px #f3f3f3;
}

.elements-holder .element-label{
    font-family: Verdana, Geneva, sans-serif;
    font-size: 10px;
    font-weight: bold;
    color: #959595;
    width: 100%;
    margin-top: 25px;
    display: block;
}

.elements-holder .input-element .element-label{
    color: #008dc8;
}

.elements-holder .input-element .add-element,
.elements-holder .output-element .add-element{
    position: absolute;
    display: block;
    background: transparent url( ../images/Assets.svg ) no-repeat;
    background-position: -714px -234px;
    width: 13px;
    height: 13px;
    top: -7px;
    right: -7px;
    display: none;
}

.elements-holder .input-element:hover > .add-element,
.elements-holder .output-element:hover > .add-element{
    display: block;
}

.elements-holder .text_module{
    background-position: -56px -58px;
}

.elements-holder .image_module{
    background-position: -211px -58px;
}

.elements-holder .video_module{
    background-position: -374px -58px;
}

.elements-holder .audio_module{
    background-position: -533px -58px;
}

.elements-holder .file_module{
    background-position: -668px -58px;
}

.elements-holder .file_input_module{
    background-position: -517px -227px;
}

.elements-holder .chat_module{
    background-position: -844px -62px;
}

.elements-holder .section_break_module{
    background-position: -988px -65px;
}

.elements-holder .text_input_module{
    background-position: -32px -226px;
}

.elements-holder .radio_input_module{
    background-position: -191px -227px;
}

.elements-holder .checkbox_input_module{
    background-position: -344px -227px;
}

.modules_accordion.ui-accordion .ui-accordion-content{
    padding: 10px;

}

div.modules_accordion{
    width: 98%;
    margin-left:1%;
    margin-right:1%;
}

div.modules_accordion .sidebar-name{
    border-color:#ddd;
}

div.level-liquid-left {
    float: left;
    clear: left;
    width: 100%;
    margin-right: -325px;
}
div.level-liquid-right {
    float: right;
    clear: right;
    width: 300px;
}

#level-left {
    margin-left: 5px;
    margin-right: 325px;
}

#level-left #edit-level {
    background-color: transparent;
    border: 0 none;
}

div.level-holder-wrap {
    padding: 0;
    margin: 10px 0 20px;
}

.sidebar-name {
    border-color: #dfdfdf;
}

.sidebar-name:hover {
    color: #333 /*!Important*/;
    cursor: move;
}

p.description {
    margin: 0 12px 12px;
}

.section-holder {
    border-width: 1px;
    border-style: solid;
    background-color: #f1f1f1;
    border-color: #ddd;
    padding-top: 15px;
    padding-bottom: 15px;
    margin-bottom: 20px;
    overflow: hidden;
}

.level-holder {
    position: relative;
    background-color: #fff;
    border-color: #ddd;
    border-width: 1px;
    border-style: solid;
    padding: 0;
}

div.level-details {
    padding-top: 10px;
    padding-left: 10px;
}

.level-holder label {
    margin-bottom: 10px;
    font-weight: bold;
}

input.wide {
    margin-top: 5px;
    width: 98%;
    margin-left: 0;
    margin-bottom: 5px;
}

div.level-details select {
    display: block;
    margin-top: 5px;	
}

.level-holder h3 {
    background-color: #f1f1f1;
    text-shadow: 0 1px 0 #FFFFFF;
    color: #000;
    font: normal bold 12px/2.2em "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
    margin-left: 0;
    margin-right: 0;
    padding-left: 10px;
    padding-top: 2px;
    padding-bottom: 2px;
    clear: both;
    display: none;
}

.level-holder h3.activecontent {
    display: block;
}

.level-holder h3.inactivecontent {
    display: none;
}

.level-holder div.advancedcontent.activecontent h3 {
    display: block;
}

#edit-level div.level-holder div.advancedtabwarning.inactivecontent {
    background-color: #fffbcc;
    border: 1px solid #e6db55;
    padding: 10px;
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 10px;
    display: none;
}

#edit-level div.level-holder div.advancedtabwarning.activecontent {
    background-color: #fffbcc;
    border: 1px solid #e6db55;
    padding: 10px;
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 10px;
    display: block;
}

a.action-to-positive {
    float: left;
}

a.action-to-negative {
    float: right;
    display: none;
}

.level-holder h3.negative {
    background-color: #ffd6d6;
}

.level-holder h3.positive {
    background-color: #edf3fe;
}
/* ... */

